--- a/BlogAspNetMVC/BlogAspNetMVC.csproj
+++ b/BlogAspNetMVC/BlogAspNetMVC.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+	
+  <ItemGroup>
+	<PackageReference Include="AutoMapper" Version="12.0.1" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlogAspNetMVC.Data\BlogAspNetMVC.Data.csproj" />
