Добавила ссылку на проект с бизнес-логикой в MVC-проект

--- a/BlogAspNetMVC/BlogAspNetMVC.csproj
+++ b/BlogAspNetMVC/BlogAspNetMVC.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlogAspNetMVC.BusinessLogic\BlogAspNetMVC.BusinessLogic.csproj" />
     <ProjectReference Include="..\BlogAspNetMVC.Data\BlogAspNetMVC.Data.csproj" />
   </ItemGroup>
 
