--- a/BlogAspNetMVC.BusinessLogic/BlogAspNetMVC.BusinessLogic.csproj
+++ b/BlogAspNetMVC.BusinessLogic/BlogAspNetMVC.BusinessLogic.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
