--- a/BlogAspNetMVC/BlogAspNetMVC.csproj
+++ b/BlogAspNetMVC/BlogAspNetMVC.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
 	<PackageReference Include="AutoMapper" Version="12.0.1" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+	<PackageReference Include="bootstrap" Version="5.3.3" />
 	<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
